CleanUp Code and fix issue #2093